# TheCatAPI

./: .pre-commit-config.yaml  Makefile  README.md  local.env  pyproject.toml
apps/cat/: admin.py  models.py  serializers.py  urls.py  views.py
apps/cat/migrations/: 0001_add_str_models.py  0001_initial_models.py  0002_add_image_field.py
apps/collections/: postman_cats_api_collection.json
apps/consumer/: asgi.py  settings.py  urls.py  wsgi.py
apps/tests/: factories.py  test_api.py  test_models.py
apps/utils/: settings.py
